examples/html-to-string-macro/tests/ui/doctype.rs
use html_to_string_macro::html;
fn main () {
    html! {
        <!not_doctype html>
    };
}